Should get all the devices